reset UI for prepare next round to initial state